add post method
