# controller/band-controller.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"band_api/data/request"
 	"band_api/helper"
 	"band_api/service"
 	"encoding/json"
@@ -18,6 +19,19 @@ func NewBandController(service service.BandService) *BandController {
 	return &BandController{
 		bandService: service,
 	}
+}
+
+// @Summary creates a band
+// @Description creates a band
+// @Tags Bands
+// @Param band body request.CreateBandRequest true "Create band"
+// @Router /bands [post]
+func (controller *BandController) Create(w http.ResponseWriter, r *http.Request) {
+	log.Logger.Info().Msg("Create Band")
+	createBandRequest := request.CreateBandRequest{}
+	json.NewDecoder(r.Body).Decode(&createBandRequest)
+	controller.bandService.Create(createBandRequest)
+	w.Header().Add("Content-Type", "application/json")
 }
 
 // @Summary returns a list of all bands
